--- a/app/App_Resources/Android/settings.json
+++ b/app/App_Resources/Android/settings.json
@@ -1,1 +1,1 @@
-{"appId":null,"minSdkVersion":null,"targetSdkVersion":null}
+{"appId":"org.skbit.Inot","minSdkVersion":null,"targetSdkVersion":null}
